# SecureValueRecovery

./: .gitignore  README.md
enclave/: .gitignore  Cargo.toml  Makefile  libkbupd_enclave.config.xml  libkbupd_enclave.debug.config.xml  libkbupd_enclave.hardened.test.config.xml  libkbupd_enclave.lds  sgx_enclave.mk
enclave/ci/azure-pipelines/: enclave.yml  master.yml
enclave/ci/azure-pipelines/jobs/: docker_build_kbupd_enclave_builder.yml  make_all.yml  make_all_insecure.yml  make_llvm_bolt.yml  make_test.yml
enclave/debian/: buildinfo  changelog  control  copyright  rules
enclave/debian/source/: lintian-overrides
enclave/docker/: Dockerfile  build_bolt.sh  build_sgx.sh  deps.mk  fetch_rust_deps.sh
enclave/include/: kbupd.proto  kbupd_client.proto  kbupd_enclave.edl  kbupd_enclave_t.c  kbupd_enclave_t.h  kbupd_enclave_u.c
enclave/kbupd_enclave/: Cargo.toml  build.rs
enclave/kbupd_enclave/src/: allocator.rs  hasher.rs  kbupd_enclave.proto  lib.rs  logging.rs  lru.rs  macros.rs  prelude.rs  protobufs.proto  raft.proto  raft.rs  remote_group.rs  util.rs
enclave/kbupd_enclave/src/ffi/: bindgen_wrapper.h  bindgen_wrapper.rs  ecalls.rs  mocks.rs  mod.rs  panic.rs  snow_resolver.rs
enclave/kbupd_enclave/src/protobufs/: kbupd.rs  kbupd_client.rs  kbupd_enclave.rs  mod.rs  raft.rs
enclave/kbupd_enclave/src/protobufs_impl/: kbupd.rs  kbupd_client.rs  kbupd_enclave.rs  mod.rs  raft.rs
enclave/kbupd_enclave/src/remote/: mod.rs  peer_manager.rs  sgx_quote.rs
enclave/kbupd_enclave/src/service/: frontend.rs  main.rs  mod.rs
enclave/kbupd_enclave/src/service/replica/: mod.rs  partition_data.rs  partition_key_range.rs  replica_group.rs
enclave/kbupd_enclave/src/storage/: mod.rs  storage_array.rs  storage_data.rs  storage_page_cache.rs
enclave/kbupd_enclave/src/storage/raft_log/: mod.rs  raft_log_data.rs  raft_log_index.rs
enclave/patches/: linux-sgx-rep-bcmp.patch
enclave/prostc/: Cargo.toml
enclave/prostc/src/: main.rs
enclave/sgx_ffi/src/: bindgen_wrapper.rs  lib.rs  mocks.rs  sgx.rs  untrusted_slice.rs  util.rs
enclave/sgxsd_ffi/src/: bindgen_wrapper.rs  ecalls.rs  lib.rs  mocks.rs
enclave/test_ffi/src/: lib.rs
service/: .gitignore  Cargo.toml  Makefile
service/ci/azure-pipelines/: master.yml
service/ci/azure-pipelines/jobs/: client_test.yml  client_test_insecure.yml  docker_build_kbupd_builder.yml  make_all.yml  make_test.yml
service/config/: frontend.benchmark.yml  frontend.client_test.yml  frontend.sample.yml  kbuptlsd.sample.yml  replica.benchmark.yml  replica.client_test.yml  replica.sample.yml
service/docker/: Dockerfile  linux-sgx.tar.gz.sha256
service/ias_client/: Cargo.toml
service/ias_client/src/: lib.rs
service/kbupd/: Cargo.toml  build.rs
service/kbupd/benches/: common.rs
service/kbupd/c_src/: kbupd_enclave_u.h  kbupd_sgxsd_callbacks.h
service/kbupd/src/: actor.rs  constants.rs  control.rs  intel_client.rs  kbupd.proto  lib.rs  logger.rs  main.rs  mocks.rs  protobufs.rs  tls.rs  unix_signal.rs  util.rs
service/kbupd/src/api/: listener.rs  mod.rs  service.rs
service/kbupd/src/api/auth/: anonymous_user.rs  mod.rs  signal_user.rs
service/kbupd/src/backup/: manager.rs  mod.rs  request_manager.rs
service/kbupd/src/enclave/: attestation_manager.rs  enclave.rs  enclave_manager.rs  error.rs  handshake_manager.rs  mod.rs  revocation_list_refresh.rs  status_refresh.rs  timer_tick.rs
service/kbupd/src/enclave/ffi/: mod.rs  (+6 more)
service/kbupd/src/frontend/: config.rs  mod.rs
service/kbupd/src/limits/: leaky_bucket.rs  mod.rs  rate_limiter.rs
service/kbupd/src/metrics/: json_reporter.rs  macros.rs  metrics.rs  mod.rs  registry.rs  reporter.rs
service/kbupd/src/peer/: codec.rs  connection.rs  discovery.rs  listener.rs  manager.rs  mod.rs  peer.rs
service/kbupd/src/protobufs_impl/: kbupd.rs  mod.rs
service/kbupd/src/replica/: mod.rs
service/kbupd_api/: Cargo.toml
service/kbupd_api/src/: entities.rs  lib.rs
service/kbupd_api_client/: Cargo.toml
service/kbupd_api_client/src/: lib.rs  main.rs
service/kbupd_client/: Cargo.toml  build.rs
service/kbupd_client/src/: kbupd_client.proto  lib.rs  protobufs.rs
service/kbupd_client/src/protobufs_impl/: kbupd_client.rs  mod.rs
service/kbupd_config/: Cargo.toml
service/kbupd_config/src/: frontend.rs  lib.rs  main.rs  metrics.rs  replica.rs
service/kbupd_config/src/frontend/: config.rs  mod.rs  validator.rs
service/kbupd_config/src/replica/: config.rs  mod.rs  validator.rs
service/kbupd_config/test-cases/: frontend.hostnames.bad.yml  frontend.hostnames.good.yml  frontend.parse.bad.yml  replica.hostnames-no-source.bad.yml  replica.hostnames-no-source.good.yml  replica.hostnames-with-source.good.yml  replica.hostnames-with-source.replica-bad.yml  replica.hostnames-with-source.source-bad.yml  replica.parse.bad.yml
service/kbupd_macro/: Cargo.toml
service/kbupd_macro/src/: lib.rs
service/kbupd_macro/tests/: tests.rs
service/kbupd_util/: Cargo.toml
service/kbupd_util/src/: base64.rs  duration.rs  hex.rs  lib.rs  pem.rs  percent.rs  thread.rs
service/kbuptlsd/: Cargo.toml
service/kbuptlsd/src/: base64.rs  client.rs  config.rs  counter.rs  lib.rs  main.rs  proxy_child.rs  server.rs  util.rs
service/kbuptlsd/src/client/: hyper.rs
service/kbuptlsd/src/server/: logger.rs
service/kbuptlsd/tests/: server_test.rs  util.rs
service/rustunnel/: Cargo.toml  build.rs
service/rustunnel/src/: lib.rs  logger.rs  proxy.rs  seccomp.rs  stream.rs  tls.rs  util.rs
service/rustunnel/tests/: client_child_test.rs  server_child_test.rs  util.rs
service/sgx_sdk_ffi/: Cargo.toml
service/sgx_sdk_ffi/src/: bindgen_wrapper.h  bindgen_wrapper.rs  lib.rs
service/test/: api_client_test.py  azure_nat_timeout.yml  client_test.py  fail_attestation.yml  fail_attestation_cert.yml  fail_attestation_rst.yml  fe_no_leaders.yml  kbupd.py  kbupdapiclient.py  kbupdclient.py  ne_latency.yml  ne_latency_loss.yml  ne_latency_variance.yml  netem.py  partition.py  peer_ca.py  randtcpkill.yml  randtcpkill_2x.yml  splitbrain.yml  start_stop.yml  start_stop_2x.yml  test_loop  util.py
(+5 files in other folders)
