[workspace]
members = ["kbupd_enclave", "sgx_ffi", "sgxsd_ffi", "test_ffi"]

[patch.crates-io]
ring      = { rev = "d0b3a4dcf1f24a2700280f9f7541cb5079398ec6", git = "https://github.com/geogriff-signal/ring.git" }
bytes     = { rev = "ebe96021b0eaf52be1fedd0a925f4384275c9cc4", git = "https://github.com/tokio-rs/bytes.git" }
memoffset = { rev = "c14a1633760b55999a687bbdf17cb1fa3d1b2f9a", git = "https://github.com/Gilnaa/memoffset.git" }

[profile.release]
lto = "fat"
