[workspace]
members = ["kbupd", "kbupd_api", "kbupd_api_client", "kbupd_client", "kbupd_config", "kbupd_util", "kbuptlsd", "rustunnel", "sgx_sdk_ffi"]

[patch.crates-io]
openssl = { rev = "ea6761d5e7b63b415b7fda6ba5c5026f4218bcd0", git = "https://github.com/geogriff-signal/rust-openssl.git" }
openssl-sys = { rev = "ea6761d5e7b63b415b7fda6ba5c5026f4218bcd0", git = "https://github.com/geogriff-signal/rust-openssl.git" }