[package]
authors     = ["Open Whisper Systems"]
name        = "ias_client"
version     = "0.1.0"
license     = "AGPL-3.0-or-later"
description = "Intel Attestation Services client"
edition     = "2018"

[dependencies]
failure      = "0.1"
futures      = "0.1"
http         = "0.1"
hyper        = "0.12"
kbupd_util   = { path = "../kbupd_util" }
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
sgx_sdk_ffi  = { path = "../sgx_sdk_ffi" }
try_future   = "0.1"
